@@ -1,10 +1,9 @@
 package com.three.recipingadsservicebe.ad.service.selector;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.three.recipingadsservicebe.abtest.entity.AbTestScenario;
 import com.three.recipingadsservicebe.ad.entity.Ad;
-import com.three.recipingadsservicebe.ad.enums.AbTestGroup;
 import com.three.recipingadsservicebe.ad.enums.AdPosition;
+import com.three.recipingadsservicebe.ad.enums.AdStatus;
 import com.three.recipingadsservicebe.ad.repository.AdRepository;
 import com.three.recipingadsservicebe.log.dto.LogType;
 import com.three.recipingadsservicebe.log.logger.AdLogger;
@@ -20,7 +19,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.context.request.RequestContextHolder;
 import org.springframework.web.context.request.ServletRequestAttributes;
 
+import java.time.LocalDateTime;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -32,233 +33,242 @@ public class AdSelector {
     private final AdRepository adRepository;
     private final ObjectMapper objectMapper;
 
+    /**
+     * 🔥 개선점 1: 성능 최적화
+     * 현재 문제: 각 위치마다 DB 쿼리를 별도로 실행
+     * 해결책: 배치 쿼리로 한 번에 조회
+     */
     public Map<String, List<Ad>> getAllAdsForUser(UserInfoDto userInfo) {
         Map<String, List<Ad>> result = new HashMap<>();
         SegmentType userSegment = (userInfo != null) ? segmentCalculator.calculate(userInfo) : SegmentType.GENERAL_ALL;
 
         log.debug("광고 선택 시작: 사용자 세그먼트={}", userSegment.name());
 
+        // 🔥 개선: 모든 활성 위치의 시나리오를 한 번에 계산
+        Map<AdPosition, AbTestScenarioType> positionScenarios = calculateAllPositionScenarios(userInfo);
+
+        // 🔥 개선: 필요한 모든 시나리오 코드를 배치로 조회
+        Set<String> scenarioCodes = positionScenarios.values().stream()
+                .map(AbTestScenarioType::getScenarioCode)
+                .collect(Collectors.toSet());
+
+        // 배치 쿼리가 없는 경우 기존 방식 사용
+        Map<String, List<Ad>> adsByScenario = getAdsByScenarioCodes(scenarioCodes);
+
         // 통계 수집용
         Map<String, Object> selectionStats = new HashMap<>();
         selectionStats.put("userSegment", userSegment.name());
         selectionStats.put("userId", userInfo != null ? userInfo.getUserId() : "GUEST");
-
         Map<String, Object> positionStats = new HashMap<>();
 
         for (AdPosition position : AdPosition.getActivePositions()) {
             try {
                 long startTime = System.currentTimeMillis();
-                List<Ad> ads = selectAdsForPosition(userInfo, userSegment, position);
-                long endTime = System.currentTimeMillis();
 
-                result.put(position.name(), ads);
+                AbTestScenarioType scenario = positionScenarios.get(position);
+                List<Ad> candidateAds = adsByScenario.getOrDefault(scenario.getScenarioCode(), List.of());
+
+                // 🔥 개선: 필터링 로직 최적화
+                List<Ad> selectedAds = selectBestAdsOptimized(candidateAds, userSegment, position);
+
+                // Fallback 처리
+                if (selectedAds.isEmpty()) {
+                    selectedAds = performFallbackStrategy(userSegment, position, scenario.getScenarioCode());
+                }
+
+                long endTime = System.currentTimeMillis();
+                result.put(position.name(), selectedAds);
 
                 // 위치별 통계
                 Map<String, Object> stats = new HashMap<>();
-                stats.put("adCount", ads.size());
+                stats.put("adCount", selectedAds.size());
                 stats.put("selectionTime", endTime - startTime);
-                stats.put("hasFallback", ads.stream().anyMatch(ad -> ad.getScenarioCode().equals("CONTROL")));
+                stats.put("scenario", scenario.getScenarioCode());
+                stats.put("hasFallback", selectedAds.stream().anyMatch(ad ->
+                        !ad.getScenarioCode().equals(scenario.getScenarioCode())));
                 positionStats.put(position.name(), stats);
 
-                log.debug("위치 [{}]: {}개 광고 선택 완료 ({}ms)",
-                        position.name(), ads.size(), endTime - startTime);
+                log.debug("위치 [{}]: {}개 광고 선택 완료 ({}ms), 시나리오: {}",
+                        position.name(), selectedAds.size(), endTime - startTime, scenario.getScenarioCode());
 
             } catch (Exception e) {
                 log.warn("위치 [{}] 광고 선택 실패: {}", position.name(), e.getMessage());
                 result.put(position.name(), List.of());
-
-                // 에러 로깅
                 logSelectionError(position, userSegment, e);
             }
         }
 
         selectionStats.put("positions", positionStats);
         selectionStats.put("totalAds", result.values().stream().mapToInt(List::size).sum());
-
-        // 전체 선택 결과 로깅
         logSelectionResult(selectionStats);
 
         return result;
     }
 
-    private List<Ad> selectAdsForPosition(UserInfoDto userInfo, SegmentType userSegment, AdPosition position) {
-        // 1단계: Enum에서 시나리오 할당
-        AbTestScenarioType scenarioType = abTestManager.assignScenario(userInfo, position);
+    /**
+     * 🔥 개선점 2: 시나리오 계산 최적화
+     */
+    private Map<AdPosition, AbTestScenarioType> calculateAllPositionScenarios(UserInfoDto userInfo) {
+        Map<AdPosition, AbTestScenarioType> scenarios = new HashMap<>();
 
-        // 2단계: 시나리오 코드로 광고 조회
-        List<Ad> candidateAds = adRepository.findByScenarioCodeAndPosition(
-                scenarioType.getScenarioCode(), position
-        );
-
-        log.trace("위치 [{}] 후보 광고: {}개, 시나리오: {}",
-                position.name(), candidateAds.size(), scenarioType.getScenarioCode());
-
-        // 3단계: 세그먼트 매칭 및 선택
-        List<Ad> selectedAds = selectBestAds(candidateAds, userSegment, position);
-
-        // 4단계: 개선된 다단계 Fallback 처리
-        if (selectedAds.isEmpty()) {
-            selectedAds = performFallbackStrategy(userSegment, position, scenarioType.getScenarioCode());
+        for (AdPosition position : AdPosition.getActivePositions()) {
+            AbTestScenarioType scenario = abTestManager.assignScenario(userInfo, position);
+            scenarios.put(position, scenario);
         }
 
-        return selectedAds;
+        return scenarios;
     }
 
-    private List<Ad> selectBestAds(List<Ad> candidateAds, SegmentType userSegment, AdPosition position) {
+    /**
+     * 배치 쿼리 대체 메서드 (AdRepository에 배치 메서드가 없는 경우)
+     */
+    private Map<String, List<Ad>> getAdsByScenarioCodes(Set<String> scenarioCodes) {
+        Map<String, List<Ad>> result = new HashMap<>();
+
+        for (String scenarioCode : scenarioCodes) {
+            // 각 시나리오별로 모든 위치의 광고를 조회
+            List<Ad> ads = new ArrayList<>();
+            for (AdPosition position : AdPosition.getActivePositions()) {
+                List<Ad> positionAds = adRepository.findByScenarioCodeAndPosition(scenarioCode, position);
+                ads.addAll(positionAds);
+            }
+            result.put(scenarioCode, ads);
+        }
+
+        return result;
+    }
+
+    /**
+     * 🔥 개선점 3: 선택 알고리즘 최적화
+     */
+    private List<Ad> selectBestAdsOptimized(List<Ad> candidateAds, SegmentType userSegment, AdPosition position) {
         if (candidateAds.isEmpty()) {
             return List.of();
         }
 
-        // 세그먼트 매칭 필터링
-        List<Ad> matchedAds = candidateAds.stream()
-                .filter(ad -> isSegmentMatched(ad, userSegment))
-                .sorted(Comparator.comparing(Ad::getScore).reversed())
+        // Phase 1 특화: 간단하고 명확한 선택 로직
+        return candidateAds.stream()
+                .filter(ad -> isSegmentMatchedOptimized(ad, userSegment))
+                .filter(this::isAdEligible) // 🔥 추가: 광고 자격 검증
+                .sorted(this::compareAds) // 🔥 개선: 정렬 로직 최적화
                 .limit(position.getSlotCount())
-                .toList();
-
-        // 매칭된 광고가 없으면 전체에서 선택
-        if (matchedAds.isEmpty()) {
-            log.debug("세그먼트 [{}] 매칭 실패 - 전체 후보에서 선택", userSegment.name());
-            return candidateAds.stream()
-                    .sorted(Comparator.comparing(Ad::getScore).reversed())
-                    .limit(position.getSlotCount())
-                    .toList();
-        }
-
-        return matchedAds;
+                .collect(Collectors.toList());
     }
 
-    // 개선: 다단계 Fallback 전략
-    private List<Ad> performFallbackStrategy(SegmentType userSegment, AdPosition position, String originalScenario) {
-        log.debug("Fallback 전략 시작 - 세그먼트: {}, 위치: {}, 원본 시나리오: {}",
-                userSegment.name(), position.name(), originalScenario);
-
-        // Fallback 로깅을 위한 정보 수집
-        Map<String, Object> fallbackInfo = new HashMap<>();
-        fallbackInfo.put("userSegment", userSegment.name());
-        fallbackInfo.put("position", position.name());
-        fallbackInfo.put("originalScenario", originalScenario);
-        fallbackInfo.put("fallbackSteps", new ArrayList<>());
-
-        List<Map<String, Object>> fallbackSteps = (List<Map<String, Object>>) fallbackInfo.get("fallbackSteps");
-
-        // 1차 Fallback: CONTROL 시나리오
-        List<Ad> controlAds = fallbackToControlScenario(userSegment, position);
-        Map<String, Object> step1 = new HashMap<>();
-        step1.put("level", 1);
-        step1.put("strategy", "CONTROL_SCENARIO");
-        step1.put("success", !controlAds.isEmpty());
-        step1.put("adCount", controlAds.size());
-        fallbackSteps.add(step1);
-
-        if (!controlAds.isEmpty()) {
-            log.debug("CONTROL 시나리오 Fallback 성공 - {}개 광고", controlAds.size());
-            logFallbackEvent(fallbackInfo, "SUCCESS");
-            return controlAds;
-        }
-
-        // 2차 Fallback: 같은 세그먼트의 다른 시나리오들
-        List<Ad> segmentAds = fallbackToSegmentAds(userSegment, position);
-        Map<String, Object> step2 = new HashMap<>();
-        step2.put("level", 2);
-        step2.put("strategy", "SEGMENT_BASED");
-        step2.put("success", !segmentAds.isEmpty());
-        step2.put("adCount", segmentAds.size());
-        fallbackSteps.add(step2);
-
-        if (!segmentAds.isEmpty()) {
-            log.debug("세그먼트 기반 Fallback 성공 - {}개 광고", segmentAds.size());
-            logFallbackEvent(fallbackInfo, "SUCCESS");
-            return segmentAds;
-        }
-
-        // 3차 Fallback: 해당 위치의 모든 광고
-        List<Ad> positionAds = fallbackToPositionAds(position);
-        Map<String, Object> step3 = new HashMap<>();
-        step3.put("level", 3);
-        step3.put("strategy", "POSITION_BASED");
-        step3.put("success", !positionAds.isEmpty());
-        step3.put("adCount", positionAds.size());
-        fallbackSteps.add(step3);
-
-        if (!positionAds.isEmpty()) {
-            log.debug("위치 기반 최종 Fallback 성공 - {}개 광고", positionAds.size());
-            logFallbackEvent(fallbackInfo, "SUCCESS");
-            return positionAds;
-        }
-
-        // 최종: 빈 리스트
-        log.warn("모든 Fallback 실패 - 위치: {}, 세그먼트: {}", position.name(), userSegment.name());
-        logFallbackEvent(fallbackInfo, "FAILED");
-        return List.of();
-    }
-
-    private List<Ad> fallbackToControlScenario(SegmentType userSegment, AdPosition position) {
-        try {
-            AbTestScenarioType controlScenario = AbTestScenarioType.getDefaultScenario();
-            List<Ad> controlAds = adRepository.findByScenarioCodeAndPosition(
-                    controlScenario.getScenarioCode(), position
-            );
-
-            return selectBestAds(controlAds, userSegment, position);
-
-        } catch (Exception e) {
-            log.error("CONTROL 시나리오 Fallback 실패: {}", e.getMessage());
-            return List.of();
-        }
-    }
-
-    private List<Ad> fallbackToSegmentAds(SegmentType userSegment, AdPosition position) {
-        try {
-            if (userSegment != SegmentType.GENERAL_ALL) {
-                List<Ad> segmentAds = adRepository.findBySegmentAndPosition(userSegment, position);
-                return segmentAds.stream()
-                        .limit(position.getSlotCount())
-                        .toList();
-            }
-            return List.of();
-
-        } catch (Exception e) {
-            log.error("세그먼트 기반 Fallback 실패: {}", e.getMessage());
-            return List.of();
-        }
-    }
-
-    private List<Ad> fallbackToPositionAds(AdPosition position) {
-        try {
-            List<Ad> positionAds = adRepository.findByPositionOnly(position);
-            return positionAds.stream()
-                    .limit(position.getSlotCount())
-                    .toList();
-
-        } catch (Exception e) {
-            log.error("위치 기반 Fallback 실패: {}", e.getMessage());
-            return List.of();
-        }
-    }
-
-    private boolean isSegmentMatched(Ad ad, SegmentType userSegment) {
-        if (ad.getTargetSegment() == SegmentType.GENERAL_ALL) {
-            return true;
-        }
-
-        if (ad.getTargetSegment() == null) {
-            return true;
-        }
-
-        if (userSegment == null) {
+    /**
+     * 🔥 개선점 4: 광고 자격 검증 추가
+     */
+    private boolean isAdEligible(Ad ad) {
+        // 활성 상태 체크
+        if (ad.getStatus() != AdStatus.ACTIVE) {
             return false;
         }
 
-        boolean matched = ad.getTargetSegment().equals(userSegment);
+        // 예산 체크
+        if (ad.getBudget() != null && ad.getSpentAmount() != null) {
+            if (ad.getSpentAmount() >= ad.getBudget()) {
+                log.debug("광고 ID {} 예산 소진: spent={}, budget={}",
+                        ad.getId(), ad.getSpentAmount(), ad.getBudget());
+                return false;
+            }
+        }
+
+        // 기간 체크
+        LocalDateTime now = LocalDateTime.now();
+        if (ad.getStartAt() != null && now.isBefore(ad.getStartAt())) {
+            return false;
+        }
+        if (ad.getEndAt() != null && now.isAfter(ad.getEndAt())) {
+            return false;
+        }
+
+        return true;
+    }
+
+    /**
+     * 🔥 개선점 5: 정렬 로직 개선
+     */
+    private int compareAds(Ad a1, Ad a2) {
+        // 1순위: 스코어 (높은 순)
+        int scoreCompare = Float.compare(
+                a2.getScore() != null ? a2.getScore() : 0f,
+                a1.getScore() != null ? a1.getScore() : 0f
+        );
+        if (scoreCompare != 0) return scoreCompare;
+
+        // 2순위: CTR (높은 순)
+        int ctrCompare = Float.compare(a2.calculateCTR(), a1.calculateCTR());
+        if (ctrCompare != 0) return ctrCompare;
+
+        // 3순위: 생성일 (최신 순)
+        return a2.getCreatedAt().compareTo(a1.getCreatedAt());
+    }
+
+    /**
+     * 🔥 개선점 6: 세그먼트 매칭 최적화
+     */
+    private boolean isSegmentMatchedOptimized(Ad ad, SegmentType userSegment) {
+        SegmentType adTargetSegment = ad.getTargetSegment();
+
+        // null이거나 GENERAL_ALL이면 모든 사용자에게 노출
+        if (adTargetSegment == null || adTargetSegment == SegmentType.GENERAL_ALL) {
+            return true;
+        }
+
+        // 사용자 세그먼트가 null이면 GENERAL_ALL로 처리
+        if (userSegment == null) {
+            userSegment = SegmentType.GENERAL_ALL;
+        }
+
+        boolean matched = adTargetSegment.equals(userSegment);
 
         log.trace("세그먼트 매칭: 광고타겟={}, 사용자={}, 결과={}",
-                ad.getTargetSegment().name(), userSegment.name(), matched);
+                adTargetSegment.name(), userSegment.name(), matched);
 
         return matched;
     }
 
-    // 로깅 헬퍼 메서드들
+    /**
+     * 🔥 개선점 7: Fallback 전략 단순화 (Phase 1에 맞춤)
+     */
+    private List<Ad> performFallbackStrategy(SegmentType userSegment, AdPosition position, String originalScenario) {
+        log.debug("Fallback 전략 시작 - 세그먼트: {}, 위치: {}", userSegment.name(), position.name());
+
+        Map<String, Object> fallbackInfo = new HashMap<>();
+        fallbackInfo.put("userSegment", userSegment.name());
+        fallbackInfo.put("position", position.name());
+        fallbackInfo.put("originalScenario", originalScenario);
+
+        // Phase 1 단순화: 기본 시나리오로 바로 fallback
+        try {
+            AbTestScenarioType defaultScenario = AbTestScenarioType.getDefaultScenario();
+            List<Ad> defaultAds = adRepository.findByScenarioCodeAndPosition(
+                    defaultScenario.getScenarioCode(), position
+            );
+
+            List<Ad> selectedAds = selectBestAdsOptimized(defaultAds, userSegment, position);
+
+            if (!selectedAds.isEmpty()) {
+                fallbackInfo.put("result", "SUCCESS");
+                fallbackInfo.put("fallbackScenario", defaultScenario.getScenarioCode());
+                logFallbackEvent(fallbackInfo, "SUCCESS");
+                return selectedAds;
+            }
+        } catch (Exception e) {
+            log.error("기본 시나리오 Fallback 실패: {}", e.getMessage());
+        }
+
+        // 최종: 빈 리스트
+        fallbackInfo.put("result", "FAILED");
+        logFallbackEvent(fallbackInfo, "FAILED");
+        return List.of();
+    }
+
+    // ========== 로깅 헬퍼 메서드들 ==========
+
+    /**
+     * Fallback 이벤트 로깅
+     */
     private void logFallbackEvent(Map<String, Object> fallbackInfo, String result) {
         try {
             HttpServletRequest request = getCurrentHttpRequest();
@@ -283,17 +293,36 @@ public class AdSelector {
         }
     }
 
+    /**
+     * 선택 결과 로깅
+     */
     private void logSelectionResult(Map<String, Object> stats) {
         try {
             HttpServletRequest request = getCurrentHttpRequest();
             if (request != null) {
                 log.info("광고 선택 완료 - 통계: {}", objectMapper.writeValueAsString(stats));
+
+                // 성능 통계 로깅 (선택적)
+                AdLogger.track(
+                        log,
+                        LogType.AD_PERFORMANCE,
+                        request.getRequestURI(),
+                        request.getMethod(),
+                        null,
+                        null,
+                        null,
+                        objectMapper.writeValueAsString(stats),
+                        request
+                );
             }
         } catch (Exception e) {
             log.warn("선택 결과 로깅 실패: {}", e.getMessage());
         }
     }
 
+    /**
+     * 선택 에러 로깅
+     */
     private void logSelectionError(AdPosition position, SegmentType userSegment, Exception error) {
         try {
             HttpServletRequest request = getCurrentHttpRequest();
@@ -305,12 +334,28 @@ public class AdSelector {
                 errorInfo.put("errorType", error.getClass().getSimpleName());
 
                 log.error("광고 선택 에러 - {}", objectMapper.writeValueAsString(errorInfo));
+
+                // 에러 추적을 위한 로깅
+                AdLogger.track(
+                        log,
+                        LogType.AD_FALLBACK, // 에러도 fallback으로 분류
+                        request.getRequestURI(),
+                        request.getMethod(),
+                        null,
+                        null,
+                        null,
+                        objectMapper.writeValueAsString(errorInfo),
+                        request
+                );
             }
         } catch (Exception e) {
             log.warn("에러 로깅 실패: {}", e.getMessage());
         }
     }
 
+    /**
+     * 현재 HTTP 요청 획득
+     */
     private HttpServletRequest getCurrentHttpRequest() {
         try {
             ServletRequestAttributes attributes =
@@ -321,7 +366,10 @@ public class AdSelector {
         }
     }
 
-    // 디버깅/모니터링을 위한 메서드
+
+    /**
+     * 디버깅/모니터링을 위한 메서드
+     */
     public Map<String, Object> getSelectionStats(UserInfoDto userInfo) {
         Map<String, Object> stats = new HashMap<>();
         SegmentType userSegment = (userInfo != null) ? segmentCalculator.calculate(userInfo) : SegmentType.GENERAL_ALL;
